@@ -11,8 +11,11 @@ New in version 6.1.1
   py-comment-class, py-comment-def-or-class,
   py-comment-statement
 
-- when `py-tab-indents-region-p' is `t',
+- when `py-tab-shifts-region-p' is `t',
   TAB will indent/cycle the region, not just the current line.
+
+- when `py-tab-indents-region-p' is `t',
+  When first TAB doesn't shift, `indent-region' is called
 
 - command from RET customizable via `py-return-key':
   `py-newline-and-indent', `newline' or `py-newline-and-dedent'
